:bug: Fixes overflow issue

--- a/set-web/src/styles/main.scss
+++ b/set-web/src/styles/main.scss
@@ -25,6 +25,7 @@ body {
 .app {
   transition: $darkModeTransition background-color, $darkModeTransition color;
   display: flex;
+  overflow: hidden;
 
   main {
     flex-grow: 1;
